# edgar-sec-filings

./: .gitattributes  README.md  dev.py  main.py  pyproject.toml
.github/workflows/: run.yml
assets/company_tickers/: company_tickers.py
assets/edgar_filings/: edgar_filings.py
assets/xbrl_company_facts/: xbrl_company_facts.py
src/: main.py  sec_client.py
src/_ingest/: company_tickers.py  edgar_filings.py
src/_transforms/company_tickers/: main.py  test.py
src/_transforms/edgar_filings/: main.py
src/_transforms/xbrl_company_facts/: main.py  test.py
src/connector_utils/: __init__.py
src/ingest/: company_tickers.py  edgar_filings.py  xbrl_company_facts.py
src/nodes/: __init__.py  company_tickers.py  edgar_filings.py  xbrl_company_facts.py
src/transforms/company_tickers/: main.py
src/transforms/edgar_filings/: main.py  test.py
src/transforms/xbrl_company_facts/: main.py
src/utils/: __init__.py  sec_client.py
