[project]
name = "edgar-sec-filings"
version = "0.1.0"
description = "SEC EDGAR filings data integration connector"
requires-python = ">=3.11"
dependencies = [
 "boto3",
 "duckdb",
 "httpx>=0.25.0",
 "pyarrow>=14.0.0",
 "pyiceberg",
 "ratelimit>=2.2.1",
 "requests>=2.31.0",
 "sqlalchemy>=2.0.43",
 "tenacity",
]
